--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>Welcome <strong>{{ user.first_name }}</strong> to <strong>P</strong>oly<strong>B</strong>ot<strong>C</strong>onversation!</h1>
+    <h1>Welcome <strong style="color: var(--cardinal)">{{ user.first_name }}</strong> to <strong>P</strong>oly<strong>B</strong>ot<strong>C</strong>onversation!</h1>
     
     <p>PolyBotConversation is an experimental web application that allows you to have group chat conversations with humans and multiple LLM-powered chatbots with individualized "personalities."</p>
     <p>Create a new chat and start exploring!</p>
